OEL-3694: Fix selector for z-index css var.

--- a/src/themes/default/src/scss/_header.scss
+++ b/src/themes/default/src/scss/_header.scss
@@ -275,7 +275,7 @@ $header-link-active-background: #003776 !default;
     width: auto;
   }
 
-  .bcl-header__navbar .dropdown-menu {
+  .bcl-header__navbar .bcl-mega-menu {
     --bcl-mega-menu-zindex: 1050; // Make sure dropdown overlaps the search offcanvas
   }
 
